@@ -12,6 +12,6 @@
     <map src="intro_loc.tmx"/>
     <script src="intro_script.rb"/>
     <start horiz="230" vertic="60"/>
-    <exit horiz="1040" vertic="200"/>
+    <exit horiz="2340" vertic="240"/>
   </body>
 </location>
